# ashyq-bilim

./: .cursorignore  .dockerignore  .env.example  .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc  Dockerfile  LICENSE  README.md  docker-compose.yml  example.env  judge0.conf  package.json  skills-lock.json  start.ps1  turbo.json
apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.py  cli.py  openapi.json  package.json  pyproject.toml
apps/api/.agents/skills/: fastapi
apps/api/config/: config.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 07313a236e8b_remove_scripts_from_organization.py  1f9b2c3d4e5f_repair_missing_creator_id_columns.py  2026_05_04_5d3a2896acff_remove_unused_submission_metadata.py  2026_05_11_b7e2c9f5a341_code_execution_runs.py  2026_05_12_a1b2c3d4e5f6_assessment_modernization_phase0.py  2026_05_13_977d3e32c36a_add_type_quiz_to_activitytypeenum.py  2026_05_13_d9a1c7e5b402_assessment_grading_finalization.py  2026_05_14_f1c2d3e4a5b6_purge_legacy_assignment_artifacts.py  269b56eec536_removed_aws_s3_support.py  2a3b4c5d6e7f_add_uuid_uniques.py  2d4e6f8a9b0c_rename_super_admin_slug_to_admin.py  30d136b8fc44_chapter_creator_id_and_userrole_org_.py  37881a918cc1_purge_multiorg_schema_columns.py  3b4c5d6e7f8g_convert_json_to_jsonb.py  3e7f9c1a2b4d_resync_system_role_permissions.py  4c5d6e7f8g9h_ci_user_email_unique.py  4f8a0d2b3c5e_dedup_permissions_unique_name.py  5447127d3297_fixed_missing_activity_permission_.py  5b281ae3408c_merge_heads_e1a2b3c4d5f6_7f8g9h0i1j2k.py  5d6e7f8g9h0i_activity_timestamps.py  69fd16a5d534_rbac_rewrite.py  6e7f8g9h0i1j_add_common_indexes.py  7f8g9h0i1j2k_course_timestamps.py  867d4f10ccb0_remove_org_signup_mechanisms.py  9daecf9a5854_remove_invite_permission_from_rbac.py  a1b2c3d4e5f6_add_canonical_progress_tables.py  a1b2c3d4e5f6_fix_submission_timestamps_to_timestamptz.py  a1b2c3d4e5f6_phase0_phase1_assignment_grading_redesign.py  a1bc2d3e4f5g_fix_role_slugs.py  a2b3c4d5e6f7_phase0_phase1_assignment_grading_redesign.py  b2c3d4e5f6a7_add_active_learners_90d_rollups.py  b32f34573336_remove_explore_column_from_organization.py  b3f9d2c4a7e8_dedupe_user_roles_add_unique_constraint.py  c1d2e3f4a5b6_bulk_timestamps_to_timestamptz.py  c3d4e5f6g7h8_add_assessment_policy_anti_cheat_json.py  c4a1e8f73b92_rbac_schema_cleanup.py  c6ac02f61616_sync_backend_models_with_db_schema.py  c72beef2c40e_remove_invite_permissions_and_cleanup.py  c9d0e1f2a3b4_add_guest_role_public_user_create.py  d1e2f3a4b5c7_restore_bulk_timestamps_to_text.py  (+29 more)
apps/api/src/: router.py
apps/api/src/app/: errors.py  factory.py  lifespan.py  observability.py
apps/api/src/auth/: backend.py  db.py  manager.py  users.py
apps/api/src/core/: platform.py  timezone.py
apps/api/src/core/events/: autoinstall.py  content.py  database.py  events.py  logs.py
apps/api/src/db/: analytics.py  assessment_contracts.py  assessments.py  audit.py  code_execution.py  collections.py  collections_courses.py  file_submissions.py  gamification.py  model_registry.py  organizations.py  permission_enums.py  permissions.py  platform.py  resource_authors.py  strict_base_model.py  trail_runs.py  trail_steps.py  trails.py  uploads.py  usergroup_resources.py  usergroup_user.py  usergroups.py  users.py
apps/api/src/db/courses/: activities.py  assignments.py  blocks.py  certifications.py  chapter_activities.py  chapters.py  code_challenges.py  course_chapters.py  course_updates.py  courses.py  discussions.py  enhanced_responses.py  exams.py  quiz.py
apps/api/src/db/grading/: __init__.py  bulk_actions.py  entries.py  progress.py  schemas.py  submissions.py
apps/api/src/db/payments/: payments.py  payments_courses.py  payments_products.py  payments_users.py
apps/api/src/infra/: metrics.py  rate_limit.py  redis.py
apps/api/src/infra/db/: engine.py
apps/api/src/routers/: analytics.py  auth.py  code_execution.py  dev.py  gamification.py  health.py  internal.py  orgs.py  platform.py  rbac.py  role_audit_store.py  roles.py  search.py  trail.py  usergroups.py  users.py  utils.py
apps/api/src/routers/ai/: ai.py
apps/api/src/routers/assessments/: unified.py
apps/api/src/routers/courses/: assignments.py  certifications.py  chapters.py  code_challenges.py  collections.py  courses.py  discussions.py  exams.py
apps/api/src/routers/ee/: cloud_internal.py  payments.py
apps/api/src/routers/grading/: __init__.py  feedback.py  sse.py  submit.py  teacher.py
apps/api/src/routers/uploads/: __init__.py  chunked_upload.py
apps/api/src/security/: auth.py  auth_cookies.py  file_validation.py  keys.py  rbac.py  security.py
apps/api/src/services/: audit.py  file_submissions.py  platform.py  platform_admin.py  platform_uploads.py  platform_users.py
apps/api/src/services/ai/: agent.py  ai.py  base.py  cache_manager.py  chromadb_pool.py  exceptions.py  init.py  message_utils.py  moderation.py  service.py  session_store.py  streaming.py
apps/api/src/services/analytics/: __init__.py  admin.py  anomalies.py  assessments.py  bottlenecks.py  courses.py  drillthrough.py  exports.py  filters.py  forecasting.py  insights.py  interventions.py  overview.py  quality.py  queries.py  risk.py  rollups.py  saved_views.py  schemas.py  scope.py  workload.py
apps/api/src/services/assessments/: __init__.py  _constants.py  _helpers.py  _shared.py  assessment_crud.py  attempt_service.py  authoring.py  compat.py  core.py  settings.py  (+3 more)
apps/api/src/tasks/: assessment_scheduler.py  assignment_scheduler.py  upload_reaper.py
apps/api/src/tests/: conftest.py  test_ai_moderation.py  test_analytics_assessment_detail_api.py  test_assessment_authoring_lifecycle.py  test_assessment_new_endpoints_api.py  test_assessment_phase0_contract_api.py  test_assessment_readiness_api.py  test_assessment_review_api.py  test_code_execution_service.py  test_course_timestamps_migration.py  test_payments_timestamp_serialization.py  test_quiz_block_route_flags.py  test_student_submission_workflow.py  test_teacher_grading_workflow.py  test_user_cache.py
(+1213 files in other folders)
